<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Foto Editor</string>
    <string name="cache_img_name">cache_img_name</string>
    <string name="developer_name">Wasim Akram Biswas</string>
    <string name="adjust">Adjust</string>
    <string name="crop">Crop</string>
    <string name="brush_text">Brush</string>
    <string name="sticker">Sticker</string>
    <string name="text">Text</string>
    <string name="filter">Filter</string>
    <string name="brush_size_text">Size</string>
    <string name="paint">Paint</string>
    <string name="right_icon_for_menu">paintMenuItemRight</string>
    <string name="pick_a_color">Pick a color</string>
    <string name="save_text">Save</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="Struck">Struck</string>
    <string name="Clarendon">Clarendon</string>
    <string name="OldMan">OldMan</string>
    <string name="Mars">Mars</string>
    <string name="Rise">Rise</string>
    <string name="April">April</string>
    <string name="Amazon">Amazon</string>
    <string name="Starlit">Starlit</string>
    <string name="Whisper">Whisper</string>
    <string name="Lime">Lime</string>
    <string name="Haan">Haan</string>
    <string name="Bluemess">Bluemess</string>
    <string name="Adele">Adele</string>
    <string name="Cruz">Cruz</string>
    <string name="Metropolis">Metropolis</string>
    <string name="Audrey">Audrey</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="sharpen">Sharpen</string>
    <string name="saturation">Saturation</string>
    <string name="Vignette">Vignette</string>
    <string name="adjust_fragment_plus">+</string>
    <string name="adjust_fragment_minus">-</string>
    <string name="img_transition_unique_name">Main_img_transition_Unique_String</string>
    <string name="emoji">Emoji</string>
    <string name="facial">Facial</string>
    <string name="fun">Fun</string>
    <string name="nature">Nature</string>
    <string name="animal">Animal</string>
    <string name="cartoon">Cartoon</string>
    <string name="food">Food</string>
    <string name="words">Words</string>
    <string name="eraser_text">Eraser</string>
    <string name="adjust_seekbar">adjustSeekbar</string>
    <string name="colorViewPager_name">Color</string>
    <string name="fontViewPager_name">Font</string>
    <string name="font_item_text">Aa</string>
    <string name="font_name_alconia">alconia</string>
    <string name="font_name_acme">acme</string>
    <string name="font_name_akronim">akronim</string>
    <string name="font_name_alex">alex</string>
    <string name="font_name_architects_daughter">architects</string>
    <string name="font_name_atomic_age">atomic age</string>
    <string name="font_name_biryani_extralight">biryani</string>
    <string name="font_name_chewy">chewy</string>
    <string name="font_name_courgette">courgette</string>
    <string name="font_name_droid_sans">droid sans</string>
    <string name="font_name_emoji_font">emoji font</string>
    <string name="font_name_kalam_light">kalam light</string>
    <string name="font_name_macondo_swash_caps">macondo </string>
    <string name="font_name_meie_script">meie script</string>
    <string name="roboto_for_font_item_data">roboto</string>
    <string name="add_text">Add Text</string>
    <string name="Default">Default</string>
    <string name="rotate">Rotate</string>
    <string name="Flip_Collage_Edit">Flip</string>
    <string name="Rotate_Collage_Edit">Rotate</string>
    <string name="Mirror_Collage_Edit">Mirror</string>
    <string name="about_written_text"> Foto Editor is a photo editor.\n This app is live playstore ❤️.</string>
    <string name="show_splash_screen_company_name">Made by <b>Wasim Akram Biswas</b> .</string>
    <string name="version_no">1.0.0</string>
    <string name="developer_description_text">"Hi 👋 I am the developer of this whole app. I am <b> Android Developer</b>, <b> Game Developer</b>,<b> Fullstack Web Developer</b> ,and trying to be <b> a Compiler Designer</b>. </string>
</resources>